--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -16,7 +16,7 @@ repos:
     - id: go-imports
     - id: validate-toml
     - id: no-go-testing
-    - id: golangci-lint
+    # - id: golangci-lint
     - id: go-unit-tests
     - id: go-build
     - id: go-mod-tidy
